--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -37,11 +37,18 @@
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
+		highlight:			#63c3ff,
+		highlight_light:	#63c3ff8a,
+		// accent1:			#6fc3df,
+		// accent2:			#8d82c4,
+		// accent3:			#ec8d81,
+		// accent4:			#e7b788,
+		// accent5:			#8ea9e8,
+		// accent6:			#87c5a4
+		accent1:			#555555,
+		accent2:			#555555,
+		accent3:			#555555,
+		accent4:			#555555,
+		accent5:			#555555,
+		accent6:			#555555
 	);
